# ASDC

Task1/: README.md  pyproject.toml
Task1/src/: manage.py
Task1/src/excel_reader/: asgi.py  settings.py  urls.py  wsgi.py
Task1/src/reader/: forms.py  models.py  urls.py  views.py
Task1/src/reader/migrations/: 0001_initial.py
